csrc/libavfilter/buffersrc.h


enum {
    AV_BUFFERSRC_FLAG_NO_CHECK_FORMAT = 1,
#if FF_API_AVFILTERBUFFER
    AV_BUFFERSRC_FLAG_NO_COPY = 2,
#endif
    AV_BUFFERSRC_FLAG_PUSH = 4,
    AV_BUFFERSRC_FLAG_KEEP_REF = 8,
};