src/org/ffmpeg/avfilter/AvfilterLibrary.java

package org.ffmpeg.avfilter;
import org.bridj.BridJ;
import org.bridj.CRuntime;
import org.bridj.Callback;
import org.bridj.FlagSet;
import org.bridj.IntValuedEnum;
import org.bridj.Pointer;
import org.bridj.ann.Library;
import org.bridj.ann.Ptr;
import org.bridj.ann.Runtime;
import org.bridj.util.DefaultParameterizedType;
import org.ffmpeg.avutil.AVClass;
import org.ffmpeg.avutil.AVDictionary;
import org.ffmpeg.avutil.AVFrame;
import org.ffmpeg.avutil.AVRational;
import org.ffmpeg.avutil.AvutilLibrary.AVMediaType;
import org.ffmpeg.avutil.AvutilLibrary.AVPixelFormat;
import org.ffmpeg.avutil.AvutilLibrary.AVSampleFormat;
/**
 * Wrapper for library <b>avfilter</b><br>
 * This file was autogenerated by <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few opensource projects.</a>.<br>
 * For help, please visit <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> or <a href="http://bridj.googlecode.com/">BridJ</a> .
 */
@Library("avfilter") 
@Runtime(CRuntime.class) 
public class AvfilterLibrary {
	static {
		BridJ.register();
	}
	/** < all automatic conversions enabled */
	public static final int AVFILTER_AUTO_CONVERT_ALL = 0;
	/** < all automatic conversions disabled */
	public static final int AVFILTER_AUTO_CONVERT_NONE = -1;
	/** Do not check for format changes. */
	public static final int AV_BUFFERSRC_FLAG_NO_CHECK_FORMAT = 1;
	/** Ignored */
	public static final int AV_BUFFERSRC_FLAG_NO_COPY = 2;
	/** Immediately push the frame to the output. */
	public static final int AV_BUFFERSRC_FLAG_PUSH = 4;
	/**
	 * Keep a reference to the frame.<br>
	 * If the frame if reference-counted, create a new reference; otherwise<br>
	 * copy the frame data.
	 */
	public static final int AV_BUFFERSRC_FLAG_KEEP_REF = 8;
	/**
	 * Conversion Error : a.num<br>
	 * SKIPPED:<br>
	 * <i>native declaration : libavutil/rational.h:0</i><br>
	 * const int64_t tmp = a.num * (int64_t)b.den - b.num * (int64_t)a.den;
	 */
	/** <i>native declaration : libavfilter/avfilter.h</i> */
	public static final int AVFILTER_THREAD_SLICE = (int)(1 << 0);
	/** <i>native declaration : ./libavfilter/version.h</i> */
	public static final String LIBAVFILTER_IDENT = (String)"Lavfi5.11.102";
	/** <i>native declaration : libavfilter/avfilter.h</i> */
	public static final int AV_PERM_ALIGN = (int)0x40;
	/** <i>native declaration : ./libavfilter/version.h</i> */
	public static final boolean FF_API_AVFILTERPAD_PUBLIC = (boolean)(5 < 6);
	/** <i>native declaration : libavfilter/avfilter.h</i> */
	public static final int AV_PERM_WRITE = (int)0x02;
	/** <i>native declaration : libavfilter/buffersink.h</i> */
	public static final int AV_BUFFERSINK_FLAG_PEEK = (int)1;
	/** <i>native declaration : ./libavfilter/version.h</i> */
	public static final boolean FF_API_AVFILTER_INIT_FILTER = (boolean)(5 < 6);
	/** <i>native declaration : libavfilter/avfilter.h</i> */
	public static final int AV_PERM_REUSE = (int)0x08;
	/** <i>native declaration : libavfilter/avfilter.h</i> */
	public static final int AVFILTER_FLAG_SUPPORT_TIMELINE = (int)((1 << 16) | (1 << 17));
	/** <i>native declaration : ./libavfilter/version.h</i> */
	public static final int LIBAVFILTER_VERSION_MICRO = (int)102;
	/** <i>native declaration : libavfilter/avfilter.h</i> */
	public static final int AVFILTER_FLAG_DYNAMIC_OUTPUTS = (int)(1 << 1);
	/** <i>native declaration : ./libavfilter/version.h</i> */
	public static final boolean FF_API_AVFILTERBUFFER = (boolean)(5 < 6);
	/** <i>native declaration : libavfilter/avfilter.h</i> */
	public static final int AV_PERM_PRESERVE = (int)0x04;
	/** <i>native declaration : libavfilter/avfilter.h</i> */
	public static final int AVFILTER_CMD_FLAG_FAST = (int)2;
	/** <i>native declaration : ./libavfilter/version.h</i> */
	public static final boolean FF_API_OLD_FILTER_REGISTER = (boolean)(5 < 6);
	/** <i>native declaration : ./libavfilter/version.h</i> */
	public static final boolean FF_API_OLD_GRAPH_PARSE = (boolean)(5 < 5);
	/** <i>native declaration : ./libavfilter/version.h</i> */
	public static final int LIBAVFILTER_VERSION_INT = (int)((5) << 16 | (11) << 8 | (102));
	/** <i>native declaration : libavfilter/avfilter.h</i> */
	public static final int AVFILTER_ALIGN = (int)16;
	/** <i>native declaration : libavfilter/buffersink.h</i> */
	public static final int AV_BUFFERSINK_FLAG_NO_REQUEST = (int)2;
	/** <i>native declaration : ./libavfilter/version.h</i> */
	public static final boolean FF_API_FOO_COUNT = (boolean)(5 < 6);
	/** <i>native declaration : libavfilter/avfilter.h</i> */
	public static final int AVFILTER_FLAG_SUPPORT_TIMELINE_GENERIC = (int)(1 << 16);
	/** <i>native declaration : libavfilter/avfilter.h</i> */
	public static final int AVFILTER_FLAG_DYNAMIC_INPUTS = (int)(1 << 0);
	/** <i>native declaration : libavfilter/avfilter.h</i> */
	public static final int AV_PERM_REUSE2 = (int)0x10;
	/** <i>native declaration : libavfilter/avfilter.h</i> */
	public static final int AVFILTER_CMD_FLAG_ONE = (int)1;
	/** <i>native declaration : ./libavfilter/version.h</i> */
	public static final boolean FF_API_AVFILTER_OPEN = (boolean)(5 < 6);
	/** <i>native declaration : ./libavfilter/version.h</i> */
	public static final int LIBAVFILTER_VERSION_MAJOR = (int)5;
	/** <i>native declaration : libavfilter/avfilter.h</i> */
	public static final int AVFILTER_FLAG_SUPPORT_TIMELINE_INTERNAL = (int)(1 << 17);
	/** <i>native declaration : ./libavfilter/version.h</i> */
	public static final boolean FF_API_NOCONST_GET_NAME = (boolean)(5 < 6);
	/**
	 * define<br>
	 * Conversion Error : 5.11.<br>
	 * SKIPPED:<br>
	 * <i>native declaration : ./libavfilter/version.h:0</i><br>
	 * 5.11.
	 */
	/** <i>native declaration : ./libavfilter/version.h</i> */
	public static final boolean FF_API_OLD_FILTER_OPTS = (boolean)(5 < 6);
	/** <i>native declaration : libavfilter/avfilter.h</i> */
	public static final int AVFILTER_FLAG_SLICE_THREADS = (int)(1 << 2);
	/** <i>native declaration : libavfilter/avfilter.h</i> */
	public static final int AV_PERM_NEG_LINESIZES = (int)0x20;
	/** <i>native declaration : ./libavfilter/version.h</i> */
	public static final int LIBAVFILTER_VERSION_MINOR = (int)11;
	/** <i>native declaration : libavfilter/avfilter.h</i> */
	public static final int AV_PERM_READ = (int)0x01;
	/** <i>native declaration : ./libavfilter/version.h</i> */
	public static final int LIBAVFILTER_BUILD = (int)((5) << 16 | (11) << 8 | (102));
	/**
	 * A function pointer passed to the @ref AVFilterGraph.execute callback to be<br>
	 * executed multiple times, possibly in parallel.<br>
	 * * @param ctx the filter context the job belongs to<br>
	 * @param arg an opaque parameter passed through from @ref<br>
	 *            AVFilterGraph.execute<br>
	 * @param jobnr the index of the job being executed<br>
	 * @param nb_jobs the total number of jobs<br>
	 * * @return 0 on success, a negative AVERROR on error<br>
	 * <i>native declaration : libavfilter/avfilter.h:878</i>
	 */
	public static abstract class avfilter_action_func extends Callback<avfilter_action_func > {
		public int apply(Pointer<AVFilterContext > ctx, Pointer<? > arg, int jobnr, int nb_jobs) {
			return apply(Pointer.getPeer(ctx), Pointer.getPeer(arg), jobnr, nb_jobs);
		}
		public int apply(@Ptr long ctx, @Ptr long arg, int jobnr, int nb_jobs) {
			return apply(Pointer.pointerToAddress(ctx, AVFilterContext.class), Pointer.pointerToAddress(arg), jobnr, nb_jobs);
		}
	};
	/**
	 * A function executing multiple jobs, possibly in parallel.<br>
	 * * @param ctx the filter context to which the jobs belong<br>
	 * @param func the function to be called multiple times<br>
	 * @param arg the argument to be passed to func<br>
	 * @param ret a nb_jobs-sized array to be filled with return values from each<br>
	 *            invocation of func<br>
	 * @param nb_jobs the number of jobs to execute<br>
	 * * @return 0 on success, a negative AVERROR on error<br>
	 * <i>native declaration : libavfilter/avfilter.h:889</i>
	 */
	public static abstract class avfilter_execute_func extends Callback<avfilter_execute_func > {
		public int apply(Pointer<AVFilterContext > ctx, Pointer<AvfilterLibrary.avfilter_action_func > func, Pointer<? > arg, Pointer<Integer > ret, int nb_jobs) {
			return apply(Pointer.getPeer(ctx), Pointer.getPeer(func), Pointer.getPeer(arg), Pointer.getPeer(ret), nb_jobs);
		}
		public int apply(@Ptr long ctx, @Ptr long func, @Ptr long arg, @Ptr long ret, int nb_jobs) {
			return apply(Pointer.pointerToAddress(ctx, AVFilterContext.class), Pointer.pointerToAddress(func, AvfilterLibrary.avfilter_action_func.class), Pointer.pointerToAddress(arg), Pointer.pointerToAddress(ret, Integer.class), nb_jobs);
		}
	};
	/**
	 * Return the LIBAVFILTER_VERSION_INT constant.<br>
	 * Original signature : <code>int avfilter_version()</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:4</i>
	 */
	public static native int avfilter_version();
	/**
	 * Return the libavfilter build-time configuration.<br>
	 * Original signature : <code>char* avfilter_configuration()</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:9</i>
	 */
	public static Pointer<Byte > avfilter_configuration() {
		return Pointer.pointerToAddress(avfilter_configuration$2(), Byte.class);
	}
	@Ptr 
	protected native static long avfilter_configuration$2();
	/**
	 * Return the libavfilter license.<br>
	 * Original signature : <code>char* avfilter_license()</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:14</i>
	 */
	public static Pointer<Byte > avfilter_license() {
		return Pointer.pointerToAddress(avfilter_license$2(), Byte.class);
	}
	@Ptr 
	protected native static long avfilter_license$2();
	/**
	 * Copy properties of src to dst, without copying the actual data<br>
	 * Original signature : <code>void avfilter_copy_buffer_ref_props(AVFilterBufferRef*, const AVFilterBufferRef*)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:157</i>
	 */
	public static void avfilter_copy_buffer_ref_props(Pointer<AVFilterBufferRef > dst, Pointer<AVFilterBufferRef > src) {
		avfilter_copy_buffer_ref_props(Pointer.getPeer(dst), Pointer.getPeer(src));
	}
	protected native static void avfilter_copy_buffer_ref_props(@Ptr long dst, @Ptr long src);
	/**
	 * Add a new reference to a buffer.<br>
	 * * @param ref   an existing reference to the buffer<br>
	 * @param pmask a bitmask containing the allowable permissions in the new<br>
	 *              reference<br>
	 * @return      a new reference to the buffer with the same properties as the<br>
	 *              old, excluding any permissions denied by pmask<br>
	 * Original signature : <code>AVFilterBufferRef* avfilter_ref_buffer(AVFilterBufferRef*, int)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:167</i>
	 */
	public static Pointer<AVFilterBufferRef > avfilter_ref_buffer(Pointer<AVFilterBufferRef > ref, int pmask) {
		return Pointer.pointerToAddress(avfilter_ref_buffer(Pointer.getPeer(ref), pmask), AVFilterBufferRef.class);
	}
	@Ptr 
	protected native static long avfilter_ref_buffer(@Ptr long ref, int pmask);
	/**
	 * Remove a reference to a buffer. If this is the last reference to the<br>
	 * buffer, the buffer itself is also automatically freed.<br>
	 * * @param ref reference to the buffer, may be NULL<br>
	 * * @note it is recommended to use avfilter_unref_bufferp() instead of this<br>
	 * function<br>
	 * Original signature : <code>void avfilter_unref_buffer(AVFilterBufferRef*)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:176</i>
	 */
	public static void avfilter_unref_buffer(Pointer<AVFilterBufferRef > ref) {
		avfilter_unref_buffer(Pointer.getPeer(ref));
	}
	protected native static void avfilter_unref_buffer(@Ptr long ref);
